--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -122,6 +122,20 @@ header {
                         padding: 0 20px;
                     }
 
+                    &.message {
+
+                        &.notify {
+
+                            &::before {
+                                content: "";
+                                width: 20px;
+                                height: 20px;
+                                display: flex;
+                                border-radius: 50px;
+                            }
+                        }
+                    }
+
                     a {
                         width: 100%;
                         height: 100%;
