--- a/scss_green/colorStyle.scss
+++ b/scss_green/colorStyle.scss
@@ -8,16 +8,16 @@ $Font_color_3: #686868;
 
 $Font_color_4: $BG_color_1;
 $Font_Title_1: $BG_color_1;
-$Font_Title_1_Active: #50BF77;
+$Font_Title_1_Active: #30AE5D;
 
 
 $Font_remind: #ff0000;
 $Font_negative: $Font_remind;
 $Font_positive: #32b411;
 
-$Font_accent01: #2F734C;
-$Font_accent02: #efc5cf;
-$Font_accent03: mix($Font_Title_1_Active,$Font_accent02, 50%);
+$Font_accent01: #0B3022;
+$Font_accent02: #FFA5BA;
+$Font_accent03: #66CC77;
 
 $Border_color_0: #ffffff;
 $Border_color_1: #cccccc;
@@ -31,7 +31,7 @@ $filter_1: #000000a4;
 
 $linear_1: linear-gradient(to top, $Font_Title_1_Active 0%, $BG_color_1 50%, $Font_Title_1_Active 100%);
 $linear_1_Active: linear-gradient(to top, $Font_Title_1_Active 0%, $Border_color_3 50%, $Font_Title_1_Active 100%);
-$linear_2: linear-gradient(to right, $Font_Title_1_Active 0%, $Font_accent01 100%);
+$linear_2: linear-gradient(to left, $Font_Title_1_Active 0%, $Font_accent03 100%);
 $BankCard_BG: linear-gradient(120deg, $Font_Title_1_Active 0%, $BG_color_1 50%, $Font_Title_1_Active 100%);
 
 //header
@@ -53,31 +53,31 @@ header .UnLoginBox label input {
     font-weight: bold;
 }
 header .UnLoginBox label i {
-    color: $Font_color_2;
+    color: $Font_accent02;
     font-size: 14px;
 }
 header .UnLoginBox .loginBtn { //個別調整
-    background: $linear_1;
+    background: linear-gradient(to top, #FFA5BA 0%, #C14D68 50%, #FFA5BA 100%);
     border-radius: 3px;
-    border: 1px solid $Border_color_0;
+    border: none;
     color: $Font_color_1;
     font-size: 14px;
     font-weight: bold;
 
     &:hover,&:active,&.active {
-        background: linear-gradient(to bottom, $Font_accent01 0%, $Font_Title_1_Active 50%, $Font_accent01 100%);;
+        background: linear-gradient(to bottom, #B43452 0%, #F1829C 100%);;
     }
 }
 header .UnLoginBox .registerBtn { //個別調整
-    background: $Font_Title_1_Active;
-    border: solid 1px $Border_color_0;
+    background: linear-gradient(to top, #ABEB3C 0%, #2CB851 100%);
     border-radius: 3px;
     color: $Font_color_1;
     font-size: 14px;
     font-weight: bold;
 
     &:hover,&:active,&.active {
-        border-color: $BG_color_1;
+        background: #30B826;
+        border: $Border_color_0 solid 1px ;
     }
 }
 header .UnLoginBox .registerBtn i { //個別調整
@@ -117,12 +117,12 @@ header .loginBox>li:nth-of-type(8) { //個別調整
     }
 }
 header .loginBox .userName { //個別調整
-    color: $Font_accent02;
+    color: $Font_color_1;
     font-size: 16px;
     font-weight: bold;
 
     span {
-        color: $Font_accent03;
+        color: $Font_accent02;
     }
 }
 header .loginBox li a {
@@ -134,10 +134,10 @@ header .loginBox li:not(:first-child) p {
     color: $Font_color_1;
 }
 header .loginBox>li.total p { //個別調整
-    color: $Font_accent03;
+    color: $Font_color_1;
 }
 header .loginBox>li.total i { //個別調整
-    color: $Font_accent03;
+    color: $Font_color_1;
     font-size: 12px;
 }
 header .loginBox .transferInfo  { //個別調整
@@ -156,6 +156,12 @@ header .loginBox .transferInfo li p.money {
     font-size: 14px;
     font-weight: bold;
 }
+header .loginBox li.message.notify ::before {
+    background: $Font_accent02;
+    color: $Font_color_2;
+    font-size: 14px;
+    font-weight: bold;
+}
 header .bottom {
     background: $BG_color_2;
 }
@@ -163,14 +169,14 @@ header nav li::before {
     background: $Border_color_3;
 }
 header nav li a p {
-    color: $Font_Title_1;
+    color: $Font_color_2;
     font-size: 18px;
     font-weight: bold;
 }
 header nav li:hover a p,
 header nav li:active a p,
 header nav li.active a p {
-    color: $Font_Title_1_Active;
+    color: $Font_color_4;
 }
 header .downList {
     background: $BG_color_2;
@@ -209,7 +215,7 @@ header .downList .fa-solid.fa-chevron-right { //個別調整 //常駐
 
 //home
 .home .typeList .gameBlock p {
-    color: $Font_Title_1;
+    color: $Font_color_2;
     font-size: 26px;
     font-weight: bold;
 }
@@ -271,19 +277,18 @@ main .gamePage_Wrap .center .gameInnerPage_Wrap .nav ul li  {
     font-weight: bold;
 
     &:hover,&:active,&.active {
-        color: $Font_Title_1_Active;
 
         &::before {
-            background: $Font_color_4;
+            background: $Border_color_3;
         }
 
         &::after{
-            border-color: transparent transparent $Font_color_4 transparent; 
+            border-color: transparent transparent $Border_color_3 transparent; 
         }
     }
 }
 main .gamePage_Wrap .center .gameInnerPage_Wrap .nav .search i {
-    color: $Font_color_3;
+    color: $Font_Title_1_Active;
     font-size: 18px;
 }
 main .gamePage_Wrap .center .gameInnerPage_Wrap .nav .search input {
@@ -301,37 +306,37 @@ main .gamePage_Wrap .center .gameInnerPage_Wrap .gameBox li ul li .textBox p {
     font-weight: bold;
 }
 main .gamePage_Wrap .center .gameInnerPage_Wrap .gameBox li ul li .textBox i {
-    font-size: 20px;
     color: $Border_color_1;
+    font-size: 20px;
 }
 main .gamePage_Wrap .center .gameInnerPage_Wrap .gameBox li ul li .textBox i.fa-solid.fa-heart {  //自行調整
-    color: #ff30b2;
+    color: $Font_accent02;
 }
 main .gamePage_Wrap .center .gameInnerPage_Wrap .gameBox li ul li .btnBox {
     background: $filter_1;
 }
 main .gamePage_Wrap .center .gameInnerPage_Wrap .gameBox li ul li .btnBox button.enter {  //自行調整
-    background: linear-gradient(to top, #801c1c 0%, #f13945 100%);
+    background: linear-gradient(to bottom, #E66A6A 0%, #BE181D 50%, #FF2626 100%);
     border-radius: 3px;
-    border: 1px solid #f56d5c;
+    border: none;
     color: $Font_color_1;
     font-size: 14px;
     font-weight: bold;
 
     &:hover,&:active,&.active {
-        background: #5a0c0c;
+        background: linear-gradient(to bottom, #920000 0%, #BE181D 100%);
     }
 }
 main .gamePage_Wrap .center .gameInnerPage_Wrap .gameBox li ul li .btnBox button.try {  //自行調整
-    background: linear-gradient(to top, #324ab9 0%, #6a91f3 100%);
+    background: linear-gradient(to bottom, #FCB03F 0%, #FCB03F 50%, #FEE85C 100%);
     border-radius: 3px;
-    border: 1px solid #5c8df5;
+    border: none;
     color: $Font_color_1;
     font-size: 14px;
     font-weight: bold;
 
     &:hover,&:active,&.active {
-        background: #0e1c5e;
+        background: linear-gradient(to bottom, #F17F1B 0%, #FCB03F 100%);
     }
 }
 
@@ -352,11 +357,11 @@ main .eventWrap .eventBody .sideNav ul {
 main .eventWrap .eventBody .sideNav ul li {
     border-bottom: 1px solid $Border_color_1;
 
-    &:hover,&:active,&.active {
-        background: $Font_accent02;
+    &:hover,&:active,&.active {   //自行調整
+        background: #D7EEDF;
 
         &::before {
-            background: $Font_Title_1_Active;
+            background: $BG_color_1;
         }
     }
 }
@@ -384,10 +389,10 @@ main .eventWrap .eventBody .eventList .eventBox ul li.btnBox button {
     height: 35px;
 }
 main .eventWrap .eventBody .eventList .eventBox ul li.btnBox button.apply { //個別調整
-    background: linear-gradient(to bottom, $Font_accent01 0%, $Font_Title_1_Active 50%, $Font_accent01 100%); 
+    background: linear-gradient(to bottom, #39E4FF 0%, #1E86D5 50%, #39E4FF 100%); 
 
     &:hover,&:active,&.active {
-        background: linear-gradient(to bottom, $Font_accent01 0%, $Font_Title_1_Active 50%, $Font_accent01 100%)
+        background: linear-gradient(to top, #21C8E2 0%, #1E86D5 100%)
     }
 }
 
@@ -1410,7 +1415,7 @@ footer .top .center li p {
 footer .top .center li:hover a,
 footer .top .center li:active a,
 footer .top .center li.active a { //個別調整
-    background: radial-gradient(circle,  $Font_Title_1_Active -5px , $BG_color_1 40px);
+    background: radial-gradient(circle,  #2A7A5C -5px , #0B3022 40px);
 }
 footer .top .center .copyright {
     color: $Font_color_1;
@@ -1446,7 +1451,7 @@ aside.app i.fa-download {
     font-size: 25px;
 }
 aside.app p { //個別調整
-    color: $Font_color_4;
+    color: $Font_color_2;
     font-size: 20px;
     font-weight: bold;
     letter-spacing: 5px;
@@ -1500,14 +1505,14 @@ aside.colorPicker .hint i{
     font-weight: bold;
 
     &:hover,&:active,&.active {
-        color: $Font_Title_1_Active;
+        color: $Font_accent01;
     }
 }
 .filter .jumpWindow.news li button::before {
     background: $Border_color_1;
 }
 .filter .jumpWindow.news li button::after {
-    background: $Border_color_2;
+    background: $Font_accent03;
 }
 .filter .jumpWindow.news li .text {
     color: $Font_color_2;
@@ -1612,12 +1617,17 @@ aside.colorPicker .hint i{
     color: $Font_color_4;
     font-size: 24px;
 }
-.filter .jumpWindow.quickTransfer .content form label .transferBtn_Box button p {
-    font-size: 14px;
+.filter .jumpWindow.quickTransfer .content form label .transferBtn_Box button {
 
     &:hover,&:active,&.active {
-        color: $Font_Title_1;
+
+        p {
+            color: $Font_color_1;
+        }
     }
+}
+.filter .jumpWindow.quickTransfer .content form label .transferBtn_Box button p {
+    font-size: 14px;
 }
 .filter .jumpWindow.quickTransfer .btnBox {
     border-top: 1px solid $Border_color_1;
@@ -1740,8 +1750,8 @@ aside.colorPicker .hint i{
 }
 
 //按鈕
-.btnStyle_1 { //按鈕樣式_1
-    background: $linear_1;
+.btnStyle_1 { //按鈕樣式_1 //個別調整
+    background: linear-gradient(to bottom, #2ED56A 0%, #229235 50%, #2ED56A 100%);
     border: 1px solid $Border_color_1;
     border-radius: 5px;
     color: $Font_color_1;
@@ -1749,11 +1759,11 @@ aside.colorPicker .hint i{
     font-weight: bold;
 
     &:hover,&:active,&.active {
-        background: $linear_1_Active;
+        background: #BA4F68;
     }
 
     &:disabled { //個別調整
-        background: #c0c0c0;
+        background: #ABABAB;
         cursor: default;
     }
 }
@@ -1782,8 +1792,9 @@ aside.colorPicker .hint i{
     color: $Font_color_2;
 
     &:hover,&:active,&.active {
+        background: $Font_accent03;
         color: $Font_Title_1;
-        border-color: $Font_Title_1;
+        border-color: transparent;
     }
 }
 
