--- a/scss/_innerPage.scss
+++ b/scss/_innerPage.scss
@@ -744,11 +744,12 @@
                             &.changePassWord {
 
                                 input {
-                                    width: 207px;
+                                    width: 196px;
                                 }
 
                                 button {
-                                    width: 60px;
+                                    width: 70px;
+                                    flex-shrink: 0;
                                 }
                             }
                             
@@ -756,6 +757,24 @@
                                 width: auto;
                                 padding: 5px;
                                 margin-left: 20px;
+                            }
+
+                            .btnInput {
+                                width: 286px;
+                                height: 40px;
+                                display: flex;
+                                align-items: center;
+                                padding: 3px 3px 3px 15px;
+
+                                input {
+                                    width: 100%;
+                                }
+
+                                button {
+                                    width: 70px;
+                                    height: 100%;
+                                    flex-shrink: 0;
+                                }
                             }
                         }
 
@@ -1372,14 +1391,20 @@
                                         margin: 0 auto;
                                         cursor: pointer;
                                     }
-                                }
+                                }                               
 
                                 li {
+
                                     &.active {
 
                                         table {
                                             display: table;
                                         }
+                                    }
+
+                                    .detailWrap {
+                                        width: 97%;
+                                        margin: 0 auto;
                                     }
 
                                     table {
@@ -2054,6 +2079,10 @@
 
                         form {
                             width: 45%;
+
+                            .submitBtn {
+                                width: 288px;
+                            }
                         }
                     }
                 }
