--- a/css_green/colorStyle.css
+++ b/css_green/colorStyle.css
@@ -150,10 +150,10 @@ header .loginBox .transferInfo li p.money {
   font-weight: bold;
 }
 
-header .loginBox li.message.notify ::before {
+header .loginBox li.message.notify::before {
   background: #FFA5BA;
   color: #000000;
-  font-size: 14px;
+  font-size: 12px;
   font-weight: bold;
 }
 
@@ -514,7 +514,7 @@ main.innerPage .center .leftSide p.userAccount {
 }
 
 main.innerPage .center .leftSide p.userAccount .level {
-  background: #30AE5D;
+  background: #FFA5BA;
   border-radius: 5px;
   color: #ffffff;
   font-size: 14px;
@@ -534,15 +534,8 @@ main.innerPage .center .leftSide .quickSelect li .quickBtn {
   border: 1px solid #0B3022;
 }
 
-main.innerPage .center .leftSide .quickSelect li .quickBtn:hover, main.innerPage .center .leftSide .quickSelect li .quickBtn:active, main.innerPage .center .leftSide .quickSelect li .quickBtn.active,
-main.innerPage .center .leftSide .quickSelect li .quickBtn:hover,
-main.innerPage .center .leftSide .quickSelect li .quickBtn:active,
-main.innerPage .center .leftSide .quickSelect li .quickBtn.active,
-main.innerPage .center .leftSide .quickSelect li .quickBtn:hover,
-main.innerPage .center .leftSide .quickSelect li .quickBtn:active,
-main.innerPage .center .leftSide .quickSelect li .quickBtn.active {
+main.innerPage .center .leftSide .quickSelect li .quickBtn:hover, main.innerPage .center .leftSide .quickSelect li .quickBtn:active, main.innerPage .center .leftSide .quickSelect li .quickBtn.active {
   background: #235945;
-  border-radius: 50px;
 }
 
 main.innerPage .center .leftSide .quickSelect li .quickBtn p {
@@ -579,7 +572,7 @@ main.innerPage .center .leftSide .innerNav li a p {
 }
 
 main.innerPage .center .leftSide .innerNav li a i {
-  color: #235945;
+  color: #30AE5D;
   font-size: 14px;
 }
 
@@ -595,7 +588,7 @@ main.innerPage .center .leftSide .innerNav li a i.fa-regular.fa-mobile-screen-bu
 main.innerPage .center .leftSide .content .innerNav li:hover a,
 main.innerPage .center .leftSide .content .innerNav li:active a,
 main.innerPage .center .leftSide .content .innerNav li.active a {
-  background: #FFA5BA;
+  background: #D7EEDF;
 }
 main.innerPage .center .leftSide .content .innerNav li:hover a::before,
 main.innerPage .center .leftSide .content .innerNav li:active a::before,
@@ -606,7 +599,7 @@ main.innerPage .center .leftSide .content .innerNav li.active a::before {
 main.innerPage .center .leftSide .innerNav li:hover a i,
 main.innerPage .center .leftSide .innerNav li:active a i,
 main.innerPage .center .leftSide .innerNav li.active a i {
-  color: #235945;
+  color: #30AE5D;
 }
 
 main.innerPage .center .leftSide .innerNav li:hover a p,
@@ -684,10 +677,11 @@ main.innerPage .center .rightSide .recordList li .detail i {
 main.innerPage .center .rightSide .recordList li .winLose .half {
   color: #000000;
   font-size: 15px;
+  font-weight: bold;
 }
 
 main.innerPage .center .rightSide .recordList li .winLose .half.win {
-  color: #32b411;
+  color: #07D400;
 }
 
 main.innerPage .center .rightSide .recordList li .winLose .half.lose {
@@ -698,6 +692,7 @@ main.innerPage .center .rightSide .recordList li .winLose .half span {
   color: #686868;
   font-size: 13px;
   letter-spacing: 1px;
+  font-weight: unset;
 }
 
 main.innerPage .center .rightSide .recordList li.eventBlock .eventInfo {
@@ -742,8 +737,8 @@ main.innerPage .center .midSide .midTop .objectList ul li.payWay {
 }
 
 main.innerPage .center .midSide .midTop .objectList ul li.payWay:hover, main.innerPage .center .midSide .midTop .objectList ul li.payWay:active, main.innerPage .center .midSide .midTop .objectList ul li.payWay.active {
-  background: -webkit-gradient(linear, right top, left top, from(#30AE5D), to(#66CC77));
-  background: linear-gradient(to left, #30AE5D 0%, #66CC77 100%);
+  background: -webkit-gradient(linear, right top, left top, from(#30AE5D), to(#41AA82));
+  background: linear-gradient(to left, #30AE5D 0%, #41AA82 100%);
   color: #ffffff;
 }
 
@@ -826,7 +821,7 @@ main.innerPage .center .midSide .midPageList li {
   letter-spacing: 2px;
 }
 main.innerPage .center .midSide .midPageList li:hover, main.innerPage .center .midSide .midPageList li:active, main.innerPage .center .midSide .midPageList li.active {
-  background: linear-gradient(135deg, #30AE5D 0%, #FFA5BA 100%);
+  background: linear-gradient(135deg, #FFA5BA 0%, #41AA82 100%);
 }
 
 main.innerPage .center .midSide .midBottom .content form .selectBtn_Wrap span.hint {
@@ -923,7 +918,7 @@ main.innerPage .center .midSide.memberCenter .midTop .objectList.memberData_stat
 }
 
 main.innerPage .center .midSide.memberCenter .midTop .objectList.memberData_state ul li.active i {
-  background: #32b411;
+  background: #07D400;
 }
 
 main.innerPage .center .midSide.memberCenter .midBottom form .half label .itemName {
@@ -935,7 +930,7 @@ main.innerPage .center .midSide.memberCenter .midBottom form .half label button 
 }
 
 main.innerPage .center .midSide.memberCenter .midBottom button.changeBtn {
-  width: 100px;
+  width: 130px;
   height: 40px;
   font-size: 15px;
   letter-spacing: 1px;
@@ -965,7 +960,7 @@ main.innerPage .center .midSide.memberCenter .midBottom table tr td:nth-of-type(
 }
 
 main.innerPage .center .midSide.memberCenter .midBottom table tr td:nth-of-type(5) p {
-  color: #32b411;
+  color: #07D400;
 }
 
 main.innerPage .center .midSide.invite .midBottom .infoBlock p {
@@ -1165,7 +1160,7 @@ main.innerPage .center .midSide.dealRecord .midBottom table.water tr td:nth-of-t
 }
 
 main.innerPage .center .midSide.dealRecord .midBottom table.water tr td:nth-of-type(5) p {
-  color: #32b411;
+  color: #07D400;
 }
 
 main.innerPage .center .midSide.pointRecord .midBottom table.deal tr td:nth-of-type(1) p {
@@ -1196,7 +1191,7 @@ main.innerPage .center .midSide.betRecord .midBottom .content .recordList li .de
 }
 
 main.innerPage .center .midSide.betRecord .midBottom .content .recordList li .detailWrap p:nth-of-type(5).win {
-  color: #32b411;
+  color: #07D400;
 }
 
 main.innerPage .center .midSide.betRecord .midBottom .content .recordList li .detailWrap i {
@@ -1214,8 +1209,8 @@ main.innerPage .center .midSide.betRecord .midBottom .content .recordList li tab
 }
 
 main.innerPage .center .midSide.betRecord .midBottom .content .recordList li table tr:first-child {
-  background: -webkit-gradient(linear, right top, left top, from(#30AE5D), to(#66CC77));
-  background: linear-gradient(to left, #30AE5D 0%, #66CC77 100%);
+  background: -webkit-gradient(linear, right top, left top, from(#30AE5D), to(#41AA82));
+  background: linear-gradient(to left, #30AE5D 0%, #41AA82 100%);
 }
 
 main.innerPage .center .midSide.betRecord .midBottom .content .recordList li table tr th {
@@ -1262,7 +1257,7 @@ main.innerPage .center .midSide.betRecord .midBottom .content .recordList li tab
 }
 
 main.innerPage .center .midSide.betRecord .midBottom .content .recordList li table tr td:last-child p.win {
-  color: #32b411;
+  color: #07D400;
 }
 
 main.innerPage .center .midSide.eventApply .midBottom .content .eventBlock {
@@ -1289,7 +1284,7 @@ main.innerPage .center .midSide.eventApply .midBottom .content .eventBlock .even
 }
 
 main.innerPage .center .midSide.eventApply .midBottom .content .eventBlock .eventTitle .block .pointCount .times {
-  color: #32b411;
+  color: #07D400;
 }
 
 main.innerPage .center .midSide.eventApply .midBottom .content .eventBlock .eventTitle button.callEventApply {
@@ -1317,15 +1312,15 @@ main.innerPage .center .midSide.mailWrap .midBottom .content .outerMode .functio
 
 main.innerPage .center .midSide.mailWrap .midBottom .content .outerMode .functionWrap button.read,
 main.innerPage .center .midSide.mailWrap .midBottom .content .outerMode .functionWrap button.readAll {
-  color: #32b411;
-  border-color: #32b411;
+  color: #07D400;
+  border-color: #07D400;
   margin-right: 10px;
 }
 main.innerPage .center .midSide.mailWrap .midBottom .content .outerMode .functionWrap button.read:hover, main.innerPage .center .midSide.mailWrap .midBottom .content .outerMode .functionWrap button.read:active, main.innerPage .center .midSide.mailWrap .midBottom .content .outerMode .functionWrap button.read.active,
 main.innerPage .center .midSide.mailWrap .midBottom .content .outerMode .functionWrap button.readAll:hover,
 main.innerPage .center .midSide.mailWrap .midBottom .content .outerMode .functionWrap button.readAll:active,
 main.innerPage .center .midSide.mailWrap .midBottom .content .outerMode .functionWrap button.readAll.active {
-  background: #32b411;
+  background: #07D400;
   color: #ffffff;
 }
 
@@ -1583,6 +1578,7 @@ main.innerPage .center .midSide.deposit .midBottom .deposit_finished .deposit_St
 
 .registerWrap .signUpBlock form .policy p span {
   color: #30AE5D;
+  text-decoration: underline;
 }
 
 footer .top {
@@ -1665,8 +1661,8 @@ aside.colorPicker .hint i {
 }
 
 .filter .jumpWindow .title {
-  background: -webkit-gradient(linear, right top, left top, from(#30AE5D), to(#66CC77));
-  background: linear-gradient(to left, #30AE5D 0%, #66CC77 100%);
+  background: -webkit-gradient(linear, right top, left top, from(#30AE5D), to(#41AA82));
+  background: linear-gradient(to left, #30AE5D 0%, #41AA82 100%);
   color: #ffffff;
   font-size: 20px;
   font-weight: bold;
@@ -1709,7 +1705,7 @@ aside.colorPicker .hint i {
 }
 
 .filter .jumpWindow.news li button::after {
-  background: #66CC77;
+  background: #41AA82;
 }
 
 .filter .jumpWindow.news li .text {
@@ -1778,7 +1774,7 @@ aside.colorPicker .hint i {
 }
 
 .filter .jumpWindow.dealDetail .content table tr td:nth-of-type(3) p {
-  color: #32b411;
+  color: #07D400;
 }
 
 .filter .jumpWindow .content table.pointJump {
@@ -1867,7 +1863,7 @@ aside.colorPicker .hint i {
 
 .btnStyle_2 {
   background: transparent;
-  border: 1px solid #30AE5D;
+  border: 1px solid #0B3022;
   border-radius: 3px;
   color: #235945;
 }
@@ -1890,7 +1886,7 @@ aside.colorPicker .hint i {
   color: #000000;
 }
 .btnStyle_3:hover, .btnStyle_3:active, .btnStyle_3.active {
-  background: #66CC77;
+  background: #41AA82;
   color: #235945;
   border-color: transparent;
 }
@@ -1931,7 +1927,7 @@ aside.colorPicker .hint i {
   display: -ms-flexbox;
   display: flex;
   padding: 5px;
-  margin: 20px auto;
+  margin: 0 auto;
 }
 .mainWrap .center .marqueeWrap .title,
 .innerPage .marqueeWrap .title,
@@ -2000,6 +1996,11 @@ aside.colorPicker .hint i {
     -webkit-transform: translate(-100%);
             transform: translate(-100%);
   }
+}
+
+.innerPage .marqueeWrap,
+.gamePage_Wrap .center .marqueeWrap {
+  margin: 20px auto;
 }
 
 .innerPage .center > div.midSide.bankCard .midTop .objectList ul .cardSet li {
