--- a/scss_green/colorStyle.scss
+++ b/scss_green/colorStyle.scss
@@ -13,11 +13,11 @@ $Font_Title_1_Active: #30AE5D;
 
 $Font_remind: #ff0000;
 $Font_negative: $Font_remind;
-$Font_positive: #32b411;
+$Font_positive: #07D400;
 
 $Font_accent01: #0B3022;
 $Font_accent02: #FFA5BA;
-$Font_accent03: #66CC77;
+$Font_accent03: #41AA82;
 
 $Border_color_0: #ffffff;
 $Border_color_1: #cccccc;
@@ -156,10 +156,10 @@ header .loginBox .transferInfo li p.money {
     font-size: 14px;
     font-weight: bold;
 }
-header .loginBox li.message.notify ::before {
+header .loginBox li.message.notify::before {
     background: $Font_accent02;
     color: $Font_color_2;
-    font-size: 14px;
+    font-size: 12px;
     font-weight: bold;
 }
 header .bottom {
@@ -477,7 +477,7 @@ main.innerPage .center .leftSide p.userAccount {
     font-weight: bold;
 }
 main.innerPage .center .leftSide p.userAccount .level { //個別調整
-    background: $Font_Title_1_Active;
+    background: $Font_accent02;
     border-radius: 5px;
     color: $Font_color_1;
     font-size: 14px;
@@ -493,13 +493,10 @@ main.innerPage .center .leftSide .quickSelect li .quickBtn { //個別調整
     border-radius: 50px;
     border: 1px solid $Border_color_2;
 }
-main.innerPage .center .leftSide .quickSelect li .quickBtn,
-main.innerPage .center .leftSide .quickSelect li .quickBtn,
 main.innerPage .center .leftSide .quickSelect li .quickBtn { //個別調整
 
     &:hover,&:active,&.active {
         background: $BG_color_1;
-        border-radius: 50px;
     }
 }
 main.innerPage .center .leftSide .quickSelect li .quickBtn p {
@@ -530,7 +527,7 @@ main.innerPage .center .leftSide .innerNav li a p {
     font-weight: bold;
 }
 main.innerPage .center .leftSide .innerNav li a i {
-    color: $Font_color_4;
+    color: $Font_Title_1_Active;
     font-size: 14px;
 }
 main.innerPage .center .leftSide .innerNav li a i.fa-regular.fa-credit-card {
@@ -543,7 +540,7 @@ main.innerPage .center .leftSide .innerNav li a i.fa-regular.fa-mobile-screen-bu
 main.innerPage .center .leftSide .content .innerNav li:hover a,
 main.innerPage .center .leftSide .content .innerNav li:active a,
 main.innerPage .center .leftSide .content .innerNav li.active a { //個別調整
-    background: $Font_accent02;
+    background: #D7EEDF;
     
     &::before {
         background: $Font_color_4;
@@ -552,7 +549,7 @@ main.innerPage .center .leftSide .content .innerNav li.active a { //個別調整
 main.innerPage .center .leftSide .innerNav li:hover a i,
 main.innerPage .center .leftSide .innerNav li:active a i,
 main.innerPage .center .leftSide .innerNav li.active a i {
-    color: $Font_color_4;
+    color: $Font_Title_1_Active;
 }
 main.innerPage .center .leftSide .innerNav li:hover a p,
 main.innerPage .center .leftSide .innerNav li:active a p,
@@ -618,6 +615,7 @@ main.innerPage .center .rightSide .recordList li .detail i {
 main.innerPage .center .rightSide .recordList li .winLose .half {
     color: $Font_color_2;
     font-size: 15px;
+    font-weight: bold;
 }
 main.innerPage .center .rightSide .recordList li .winLose .half.win {
     color: $Font_positive;
@@ -629,6 +627,7 @@ main.innerPage .center .rightSide .recordList li .winLose .half span {
     color: $Font_color_3;
     font-size: 13px;
     letter-spacing: 1px;
+    font-weight: unset;
 }
 main.innerPage .center .rightSide .recordList li.eventBlock .eventInfo {
     color: $Font_color_2;
@@ -753,7 +752,7 @@ main.innerPage .center .midSide .midPageList li {
     letter-spacing: 2px;
 
     &:hover,&:active,&.active { 
-        background: linear-gradient(135deg, $Font_Title_1_Active 0%, $Font_accent02 100%); 
+        background: linear-gradient(135deg, $Font_accent02  0%, $Font_accent03 100%); 
     }
 }
 
@@ -850,7 +849,7 @@ main.innerPage .center .midSide.memberCenter .midBottom form .half label button 
     white-space: nowrap;
 }
 main.innerPage .center .midSide.memberCenter .midBottom button.changeBtn {
-    width: 100px;
+    width: 130px;
     height: 40px;
     font-size: 15px;
     letter-spacing: 1px;
@@ -1401,6 +1400,7 @@ main.innerPage .center .midSide.deposit .midBottom .deposit_finished .deposit_St
 }
 .registerWrap .signUpBlock form .policy p span {
     color: $Font_Title_1_Active;
+    text-decoration: underline;
 }
 
 //footer
@@ -1641,7 +1641,7 @@ aside.colorPicker .hint i{
     box-shadow: 0 0 13px 3px $boxShadow_1;
     display: flex;
     padding: 5px;
-    margin: 20px auto;
+    margin: 0 auto;
 
     .title {
         width: 160px;
@@ -1769,7 +1769,7 @@ aside.colorPicker .hint i{
 }
 .btnStyle_2 { //按鈕樣式_2 主色邊線按鈕
     background: transparent;
-    border: 1px solid $Border_color_3;
+    border: 1px solid $Border_color_2;
     border-radius: 3px;
     color: $Font_Title_1;
 
@@ -1829,6 +1829,10 @@ aside.colorPicker .hint i{
 .innerPage .marqueeWrap,
 .gamePage_Wrap .center .marqueeWrap {
     @include marqueeStyle;
+}
+.innerPage .marqueeWrap,
+.gamePage_Wrap .center .marqueeWrap {
+    margin: 20px auto;
 }
 
 .innerPage .center>div.midSide.bankCard .midTop .objectList ul .cardSet li {
