--- a/scss/_aside.scss
+++ b/scss/_aside.scss
@@ -129,6 +129,14 @@ aside {
                 &.green {
                     background: #235945;
                 }
+
+                &.blue {
+                    background: #158CF5;
+                }
+                
+                &.purple {
+                    background: #9647BF;
+                }
             }
         }
     }
