--- a/scss/_aside.scss
+++ b/scss/_aside.scss
@@ -137,6 +137,9 @@ aside {
                 &.purple {
                     background: #9647BF;
                 }
+                &.orange {
+                    background: #ffa500;
+                }
             }
         }
     }
