--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -19,7 +19,7 @@ html {
         main {
             width: 100%;
             height: auto;
-            padding-top: 120px;
+            padding: 120px 0 215px;
         }
 
         //大背景
